tests/ui/fail/always_false_predicate.rs
use contracts::ensures;

#[ensures(false)]
fn checked() {}

fn main() {
    checked();
}
